gimp_image_merge_layers(): apply the layer mask only if layer->apply_mask
2000-12-27  Michael Natterer  <mitch@gimp.org>

	* app/gimpimage.c: gimp_image_merge_layers(): apply the layer mask
	only if layer->apply_mask is TRUE, cleanup.


Former-commit-id: 7f298013635c3fa313becd6e086d6a5de05da6a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-27  Michael Natterer  <mitch@gimp.org>
+
+	* app/gimpimage.c: gimp_image_merge_layers(): apply the layer mask
+	only if layer->apply_mask is TRUE, cleanup.
+
 2000-12-27  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/mosaic/mosaic.c
