--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/measure.c: cleanup, proper prototypes, ...
+
 2000-12-27  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/csource.c: the size of the string holding the
