--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,28 @@
 2000-12-28  Sven Neumann  <sven@gimp.org>
 
+	* app/boundaryF.h
+	* app/gdisplayP.h
+	* app/gimplistP.h
+	* app/gimplutP.h
+	* app/gimpsetP.h
+	* app/parasitelistP.h
+	* app/pixel_regionP.h: removed these files
+
+	* app/Makefile.am
+	* app/apptypes.h
+	* app/boundary.[ch]
+	* app/floating_sel.h
+	* app/gdisplay.c
+	* app/gimplist.h
+	* app/gimplut.[ch]
+	* app/gimpset.[ch]
+	* app/parasitelist.[ch]
+	* app/pixel_processor.c
+	* app/pixel_region.[ch]: moved structure definitions into the
+	normal headers, various cleanups
+
+2000-12-28  Sven Neumann  <sven@gimp.org>
+
 	* app/channel_cmds.c
 	* app/layer_cmds.c
 	* libgimp/gimpchannel_pdb.c
